recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:2: error: not found: value step
  current(step)
          ^